// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaQuery Should not render desktop mediaQuery 1`] = `""`;

exports[`MediaQuery Should render phone mediaQuery 1`] = `
<span>
  Hello MediaQuery
</span>
`;

exports[`MediaQuery Should work as render prop 1`] = `
<span>
  Lorem Ipsum
</span>
`;

exports[`MediaQuery Should work with custom media query 1`] = `"match me!"`;
